# io-webdavis

./: .gitignore  README.md  pyproject.toml  webframeworks.md
dev/notes/: webframeworks.md
dev/questions/: wtf_0003.md
docs/: UBUNTU-DEV-ENVIRONMENT.md  ubuntu-dev-environment.md  webframeworks.md  wtf_0003.md
io_webdavis_django/: manage.py  pyproject.toml
io_webdavis_django/io_webdavis_django/: asgi.py  settings.py  urls.py  wsgi.py
io_webdavis_django/polls/: models.py  tests.py  views.py
io_webdavis_django/polls/migrations/: 0001_initial.py  0002_auto_20210321_0005.py
io_webdavis_django/polls/static/polls/: style.css
io_webdavis_django/polls/templates/polls/: detail.html  index.html  results.html
ops/ansible/playbook-appserver/: .gitignore  README.md  Vagrantfile  ansible-playbook-wrapper  ansible.cfg  bootstrap.yml  build_webdavis-server.yml  devenv.yml  hosts.ini  packer-wrapper  vault.password.py
ops/ansible/playbook-appserver/group_vars/all/: main.yml  vault.yml
ops/ansible/playbook-appserver/host_vars/: ebenezar.netdavis.io
ops/ansible/playbook-appserver/roles/base/files/: sshd_config
ops/ansible/playbook-appserver/roles/base/tasks/: localadmin.yml  main.yml  remove_pi_user.yml  ssh.yml
ops/ansible/playbook-appserver/roles/devenv/tasks/: main.yml  tools_base.yml  workspaces_base.yml
ops/ansible/playbook-appserver/roles/firmware/handlers/: main.yml
ops/ansible/playbook-appserver/scripts/: install-ansible  remove-ansible
ops/dev/: UBUNTU-DEV-ENVIRONMENT.md
ops/packer/: build_webdavis-server.json  build_webdavis-server.pkr.hcl
(+10 files in other folders)
