[tool.poetry]
name = "io-webdavis"
version = "0.1.0"
description = "Stephen Davis's personal website."
authors = ["Stephen A. Davis <stephen@webdavis.io>"]

[tool.poetry.dependencies]
python = "3.8.6"

[tool.poetry.dev-dependencies]
grip = "^4.5.2"
ansible = "^2.10.4"
ansible-lint = "^4.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
