[tool.poetry]
name = "io_webdavis_django"
version = "0.1.0"
description = "Stephen Davis's personal Django powered website."
authors = ["Stephen A. Davis <stephen@webdavis.io>"]

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
